--- a/Week 3 - Pug Latin/Alfonso/Day2/Day2/Day2.csproj
+++ b/Week 3 - Pug Latin/Alfonso/Day2/Day2/Day2.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="PigLatin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
