Finished with tests

--- a/Week 5 - Roman Numerals/Ryan/Day4/Day4/Day4.csproj
+++ b/Week 5 - Roman Numerals/Ryan/Day4/Day4/Day4.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateProgramFile>false</GenerateProgramFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
